--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,5 @@
+<ul>
 <% @articles.each do |article| %>
-  <h2><%= link_to article.title, article_path(article) %></h2>
-  <p><%= article.text.html_safe %></p>
+  <li><%= link_to article.title, article_path(article) %></li>
 <% end %>
+</ul>
