--- a/app/views/articles/_form.html
+++ b/app/views/articles/_form.html
@@ -11,12 +11,10 @@
   </div>
   <% end %>
   <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, style: "width:400px;height:20px" %>
   </p>
  
   <p>
-    <%= f.label :text %><br>
     <%= f.cktext_area :text, rows: 10 %>
   </p>
  
