--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <ul>
 <% @articles.each do |article| %>
-  <li><%= link_to article.title, article_path(article) %></li>
+  <li><%= link_to article.title, article_path(article) %>&nbsp;&nbsp;(<%= format_date(article.created_at) %>)</li>
 <% end %>
 </ul>
