--- a/app/views/articles/_form.html
+++ b/app/views/articles/_form.html
@@ -27,3 +27,23 @@
     <%= f.submit %>
   </p>
 <% end %>
+<script>
+$(function() {
+  if ($("#new_article").length > 0) {
+    setTimeout(autoSavePost, 6000); 
+  }    
+});
+
+function autoSavePost() {
+$.ajax({
+  type: "POST",
+  url: "/articles/autosave",
+  data: $("#new_article").serialize(),
+  dataType: "script",
+  success: function(data) {
+    console.log(data);
+  }
+});
+  setTimeout(autoSavePost, 6000);
+}
+</script>
