--- a/app/views/admin/articles/_form.html
+++ b/app/views/admin/articles/_form.html
@@ -10,6 +10,7 @@
     </ul>
   </div>
   <% end %>
+  <%= f.hidden_field :id %>
   <p>
     <%= f.text_field :title, style: "width:400px;height:20px" %>
   </p>
