--- a/app/views/admin/articles/_form.html
+++ b/app/views/admin/articles/_form.html
@@ -21,7 +21,8 @@
   </p>
 
   <p>
-    <%= f.cktext_area :text, rows: 10 %>
+    <%#= f.cktext_area :text, rows: 10 %>
+    <%= f.text_area :text, rows: 10 %>
   </p>
  
   <p>
