--- a/app/views/admin/articles/_form.html
+++ b/app/views/admin/articles/_form.html
@@ -22,7 +22,7 @@
 
   <p>
     <%#= f.cktext_area :text, rows: 10 %>
-    <%= f.text_area :text, rows: 10 %>
+    <%= f.text_area :text, cols: 80, rows: 30 %>
   </p>
  
   <p>
