--- a/app/views/admin/articles/_form.html
+++ b/app/views/admin/articles/_form.html
@@ -1,4 +1,4 @@
-<%= form_for @article, url: admin_article_path do |f| %>
+<%= form_for @article, url: admin_article_path, html:{:multipart => true}  do |f| %>
   <% if @article.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(@article.errors.count, "error") %> prohibited
