--- a/app/views/admin/articles/_form.html
+++ b/app/views/admin/articles/_form.html
@@ -20,6 +20,10 @@
     <%= f.text_field :tags, value: @article.tags_list,  style: "width:400px;height:20px" %>
   </p>
 
+  <p>
+    <%= f.select(:status, [['publish', 'publish'], ['draft', 'draft']]) %>
+  </p>
+
   <%= render "editor_toolbar" %>
   <p>
     <%#= f.cktext_area :text, rows: 10 %>
