--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,13 @@
       }
   });
 </script>
+<p class="navbar-text pull-right">
+<% if signed_in? %>
+  Logged in as <strong><%= current_user.email %></strong>.
+  <%= link_to "Sign out", signout_path, method: "delete" %>
+<% else %>
+  <%= link_to "Login", new_session_path, :class => 'navbar-link'  %>
+<% end %>
 
 <%= yield %>
 
