--- a/app/views/admin/articles/_editor_toolbar.html.erb
+++ b/app/views/admin/articles/_editor_toolbar.html.erb
@@ -1,5 +1,5 @@
 <div class="editor-toolbar">
-  <div class="icons pull-right">
+  <div class="icons">
     <%= link_to("", "#", id: "topic_add_image", rel: "twipsy", title: "Upload image", class: "icon small_image")%>
     <input type="file" id="topic-upload-images"/>
   </div>
