--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -1,5 +1,4 @@
-<h1>Listing Articles</h1>
-<%= link_to 'New article', new_admin_article_path %>
+<%= link_to 'New Article', new_admin_article_path %>
 <table>
 <% @articles.each do |article| %>
   <tr>
