--- a/app/views/admin/pages/_form.html.erb
+++ b/app/views/admin/pages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @article, url: admin_article_path, html:{:multipart => true}  do |f| %>
+<%= form_for @article, url: admin_page_path, html:{:multipart => true, :class => "form-horizontal"}  do |f| %>
   <% if @article.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(@article.errors.count, "error") %> prohibited
@@ -11,28 +11,46 @@
   </div>
   <% end %>
   <%= f.hidden_field :id %>
-  <p>
-    <%= f.text_field :title, style: "width:400px;height:20px" %>
-  </p>
+  <div class="control-group">
+    <div class="controls">
+    <%= f.text_field :title, class: "span5"  %>
+    </div>
+  </div>
  
-  <p>
+  <div class="control-group">
+    <div class="control-label">
     <%= f.label :tags %>
-    <%= f.text_field :tags, value: @article.tags_list,  style: "width:400px;height:20px" %>
-  </p>
+    </div>
+    <div class="controls">
+    <%= f.text_field :tags, value: @article.tags_list,  class: "span5"  %>
+    </div>
+  </div>
 
-  <p>
+  <div class="control-group">
+    <div class="controls">
     <%= f.select(:status, [['publish', 'publish'], ['draft', 'draft']]) %>
-  </p>
+    </div>
+  </div>
 
-  <%= render "editor_toolbar" %>
-  <p>
+  <div class="control-group">
+    <div class="controls">
+    <%= render "admin/articles/editor_toolbar" %>
+    </div>
+  </div>
+
+  <div class="control-group">
+    <div class="controls">
     <%#= f.cktext_area :text, rows: 10 %>
-    <%= f.text_area :text, cols: 80, rows: 30, class: "topic-editor closewarning" %>
-  </p>
+    <%= f.text_area :text,  class: "topic-editor closewarning" %>
+    </div>
+  </div>
  
-  <p>
+  <div class="control-group">
+    <div class="controls">
     <%= f.submit %>
-  </p>
+    </div>
+  </div>
+
 <% end %>
 <script>
 /*
