--- a/app/views/layouts/admin/articles.html.erb
+++ b/app/views/layouts/admin/articles.html.erb
@@ -7,9 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="wrapper">
 <%= render 'layouts/admin/header' %>
-
 <%= yield %>
+<div>
 
 </body>
 </html>
