--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,10 @@
 </head>
 <body>
 
+<div class="wrapper">
 <%= render 'layouts/header' %>
 <%= yield %>
+<div>
 
 <%= debug(params) if Rails.env.development? %>
 </body>
