--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,15 +3,12 @@
 
 /* typography */
 
-body, h1, h2, h3, h4, h5, h6,
-p, blockquote, pre, hr,
-dl, dd, ol, ul, figure {
-  margin: 0;
-  padding: 0; }
-
+h2, h3, h4, h5 {
+  margin: 2em 0 1em; }
 /**
  * Basic styling
  */
+
 body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -25,10 +22,6 @@ body {
  */
 h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
-ul, ol, dl, figure,
-.highlight {
-  margin-bottom: 15px; }
-
 /**
  * Images
  */
@@ -49,12 +42,14 @@ figcaption {
  * Lists
  */
 ul, ol {
-  margin-left: 30px; }
+  padding: 0 0 0 30px; }
 
-li > ul,
-li > ol {
-  margin-bottom: 0; }
-
+ul.list-group, ul.list-group li {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+ul.list-group li {
+  margin-bottom: 20px; }
 /**
  * Headings
  */
@@ -108,15 +103,6 @@ pre {
     padding-left: 0; }
 
 
-ul {
-  padding: 0 0 0 30px; 
-}
-ul li {
-  margin: 0;
-  padding: 0;
-  list-style: none; 
-  margin-bottom: 20px; 
-}
 
 .control-group:last-of-type { margin-bottom:0px; }
 .topic-editor { width:80%; height: 400px; }
