--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -1,5 +1,5 @@
 <%= link_to 'New Article', new_admin_article_path %>
-<table>
+<table class="table table-striped table-hover">
 <% @articles.each do |article| %>
   <tr>
     <td><%= link_to article.title, admin_article_path(article) %>&nbsp;&nbsp;(<%= format_date(article.created_at) %>)</td>
